--- a/CoreDemo/Views/Login/Index.cshtml
+++ b/CoreDemo/Views/Login/Index.cshtml
@@ -94,11 +94,11 @@
                         <form method="POST" class="register-form" id="login-form">
                             <div class="form-group">
                                 <label for="email"><i class="zmdi zmdi-email"></i></label>
-                                <input type="email" name="email" id="email" placeholder="Mail Adresi" />
+                                <input type="email" name="WriterMail" id="email" placeholder="Mail Adresi" />
                             </div>
                             <div class="form-group">
                                 <label for="your_pass"><i class="zmdi zmdi-lock"></i></label>
-                                <input type="password" name="your_pass" id="your_pass" placeholder="Şifre" />
+                                <input type="password" name="WriterPassword" id="your_pass" placeholder="Şifre" />
                             </div>
                             <div class="form-group">
                                 <input type="checkbox" name="remember-me" id="remember-me" class="agree-term" />
