--- a/CoreDemo/Views/Blog/BlogReadAll.cshtml
+++ b/CoreDemo/Views/Blog/BlogReadAll.cshtml
@@ -73,12 +73,13 @@
                         <div class="tech-btm">
                             <img src="~/CoreBlogTheme/images/banner1.jpg" class="img-fluid" alt="">
                         </div>
-
-                     @await Html.PartialAsync("~/Views/NewsLetter/SubscribeMail.cshtml");
-
+                        <!--Subscribe-->
+                        <h4>Mail Bültenine Abone Ol</h4>
+                        @await Html.PartialAsync("~/Views/NewsLetter/SubscribeMail.cshtml")
+                        <!--Subscribe-->
                         @await Component.InvokeAsync("CategoryList")
-                         @await Component.InvokeAsync("WriterLastBlog")
-                      
+                        @await Component.InvokeAsync("WriterLastBlog")
+
                         <div class="single-gd my-5 tech-btm">
                             <h4>Our Progress</h4>
                             <div class="progress">
