--- a/CoreDemo/Views/NewsLetter/SubscribeMail.cshtml
+++ b/CoreDemo/Views/NewsLetter/SubscribeMail.cshtml
@@ -1,9 +1,9 @@
 ﻿
 <div class="tech-btm">
-    <h4>Mail Bültenine Abone Ol</h4>
-    <p>Teknoloji,Yazılım vb. </p>
+
+    <p>Teknoloji,yazılım ve daha fazlası için... </p>
     <form action="/NewsLetter/SubscribeMail/" method="post">
         <input type="email" placeholder="Email" required="" , name="mail">
-        <input type="submit" value="Subscribe">
+        <input type="submit" value="ABONE OL">
     </form>
 </div>
