--- a/CoreDemo/Views/Shared/Partial3.cshtml
+++ b/CoreDemo/Views/Shared/Partial3.cshtml
@@ -4,88 +4,24 @@
         <div class="row">
             <div class="col-lg-4 footer-grid-agileits-w3ls text-left">
                 <h3>Hakkımızda</h3>
-                <p>Hakkımızda kısmı..</p>
+                <p>Hakkımızda bilgi edinmek için...</p>
                 <div class="read">
                     <a href="/About/Index/" class="btn btn-primary read-m">Devamını oku</a>
                 </div>
             </div>
             <div class="col-lg-4 footer-grid-agileits-w3ls text-left">
-
-                <div class="tech-btm">
-                    <h3>Son Postlar</h3>
-                    <div class="blog-grids row mb-3">
-                        <div class="col-md-5 blog-grid-left">
-                            <a href="single.html">
-                                <img src="~/CoreBlogTheme/images/4.jpg" class="card-img-top img-fluid" alt="">
-                            </a>
-                        </div>
-                        <div class="col-md-7 blog-grid-right">
-
-                            <h5>
-                                <a href="single.html">Pellentesque dui, non felis. Maecenas male non felis </a>
-                            </h5>
-                            <div class="sub-meta">
-                                <span>
-                                    <i class="far fa-clock"></i> 20 Jan, 2018
-                                </span>
-                            </div>
-                        </div>
-
-                    </div>
-                    <div class="blog-grids row mb-3">
-                        <div class="col-md-5 blog-grid-left">
-                            <a href="single.html">
-                                <img src="~/CoreBlogTheme/images/5.jpg" class="card-img-top img-fluid" alt="">
-                            </a>
-                        </div>
-                        <div class="col-md-7 blog-grid-right">
-
-                            <h5>
-                                <a href="single.html">Pellentesque dui, non felis. Maecenas male non felis </a>
-                            </h5>
-                            <div class="sub-meta">
-                                <span>
-                                    <i class="far fa-clock"></i> 20 Jan, 2018
-                                </span>
-                            </div>
-                        </div>
-
-                    </div>
-                    <div class="blog-grids row mb-3">
-                        <div class="col-md-5 blog-grid-left">
-                            <a href="single.html">
-                                <img src="~/CoreBlogTheme/images/6.jpg" class="card-img-top img-fluid" alt="">
-                            </a>
-                        </div>
-                        <div class="col-md-7 blog-grid-right">
-
-                            <h5>
-                                <a href="single.html">Pellentesque dui, non felis. Maecenas male non felis </a>
-                            </h5>
-                            <div class="sub-meta">
-                                <span>
-                                    <i class="far fa-clock"></i> 20 Jan, 2018
-                                </span>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
+                 
+                @await Component.InvokeAsync("BlogLast2Post")
+             
             </div>
             <!-- subscribe -->
             <div class="col-lg-4 subscribe-main footer-grid-agileits-w3ls text-left">
-                <h2>Signup to our newsletter</h2>
+                <h2>Mail Bültenine Abone Ol</h2>
                 <div class="subscribe-main text-left">
-                    <div class="subscribe-form">
-                        <form action="#" method="post" class="subscribe_form">
-                            <input class="form-control" type="email" placeholder="Enter your email..." required="">
-                            <button type="submit" class="btn btn-primary submit">Submit</button>
-                        </form>
-                        <div class="clearfix"> </div>
-                    </div>
-                    <p>We respect your privacy.No spam ever!</p>
+                    @await Html.PartialAsync("~/Views/NewsLetter/SubscribeMail.cshtml")
+                    <p>Aramıza Katılmak ister misin?</p>
                 </div>
-                <!-- //subscribe -->
+             <!-- //subscribe -->
             </div>
         </div>
         <!-- footer -->
