--- a/CoreDemo/Views/Shared/Components/CategoryList/Default.cshtml
+++ b/CoreDemo/Views/Shared/Components/CategoryList/Default.cshtml
@@ -1,5 +1,6 @@
 ﻿@model IEnumerable<EntityLayer.Concrete.Category>
 
+
 <div class="tech-btm">
     <h4>Kategoriler</h4>
     @foreach (var item in Model)
@@ -10,5 +11,6 @@
                 <span class="badge badge-primary badge-pill">1</span>
             </li>
         </ul>
+        //BlogReadAll Components
     }
 </div>
