♻️ Refactor WriterSignIn Identity Control

--- a/CoreDemo/Views/Shared/WriterLayout.cshtml
+++ b/CoreDemo/Views/Shared/WriterLayout.cshtml
@@ -111,7 +111,7 @@
                       <div class="content-wrapper">
                              @RenderBody()
                       </div>
-                     @await Html.PartialAsync("~/Views/Writer/WriterFooterPartial.cshtml");
+                     @await Html.PartialAsync("~/Views/Writer/WriterFooterPartial.cshtml")
                 </div>
           </div>
     </div>
