--- a/CoreDemo/Views/Dashboard/Index.cshtml
+++ b/CoreDemo/Views/Dashboard/Index.cshtml
@@ -8,17 +8,11 @@
 
 <div class="page-header">
     <h3 class="page-title">
-        <span class="page-title-icon bg-gradient-primary text-white mr-2">
+        <span class="page-title-icon bg-gradient-primary text-white mr-3">
             <i class="mdi mdi-home"></i>
         </span> Dashboard
     </h3>
-    <nav aria-label="breadcrumb">
-        <ul class="breadcrumb">
-            <li class="breadcrumb-item active" aria-current="page">
-                <span></span>Overview <i class="mdi mdi-alert-circle-outline icon-sm text-primary align-middle"></i>
-            </li>
-        </ul>
-    </nav>
+
 </div>
 <div class="row">
     <div class="col-md-3 stretch-card grid-margin">
@@ -28,7 +22,7 @@
                 <h4 class="font-weight-normal mb-3">
                     Toplam Blog Sayısı <i class="mdi mdi-chart-line mdi-24px float-right"></i>
                 </h4>
-                <h2 class="mb-5"> 📈 0</h2>
+                <h2 class="mb-5"> 📈  @ViewBag.totalBlogCount</h2>
                 <h6 class="card-text">İşte tüm bloglarımız</h6>
             </div>
         </div>
@@ -40,7 +34,7 @@
                 <h4 class="font-weight-normal mb-3">
                     Blog Sayınız <i class="mdi mdi-bookmark-outline mdi-24px float-right"></i>
                 </h4>
-                <h2 class="mb-5">📝0</h2>
+                <h2 class="mb-5">📝@ViewBag.totalMyBlogCount</h2>
                 <h6 class="card-text">Hedeflerin doğrultusunda ol.</h6>
             </div>
         </div>
@@ -50,10 +44,10 @@
             <div class="card-body">
                 <img src="~/WriterTheme/assets/images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image" />
                 <h4 class="font-weight-normal mb-3">
-                    Son 7 Gündeki Blog Sayısı <i class="mdi mdi-diamond mdi-24px float-right"></i>
+                    Toplam Yorum Sayısı <i class="mdi mdi-diamond mdi-24px float-right"></i>
                 </h4>
-                <h2 class="mb-5"> 📆 0</h2>
-                <h6 class="card-text">Daha fazla yazmalısın!</h6>
+                <h2 class="mb-5"> 💬 @ViewBag.totalCommentCount </h2>
+                <h6 class="card-text">Sorgulayıcı bir nesil.</h6>
             </div>
         </div>
     </div>
@@ -62,54 +56,16 @@
             <div class="card-body">
                 <img src="~/WriterTheme/assets/images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image" />
                 <h4 class="font-weight-normal mb-3">
-                    Toplam Yazar Sayısı <i class="mdi mdi-pencil mdi-24px float-right"></i>
+                    Toplam Kategori Sayısı <i class="mdi mdi-pencil mdi-24px float-right"></i>
                 </h4>
-                <h2 class="mb-5"> 🀄 0</h2>
-                <h6 class="card-text">İşte Ekibin!</h6>
+                <h2 class="mb-5"> 🀄 @ViewBag.totalCategoryCount </h2>
+                <h6 class="card-text">Farklı bakış açıları!</h6>
             </div>
         </div>
     </div>
 </div>
 @await Component.InvokeAsync("BlogListDashboard")
-<div class="row">
-    <div class="col-12 grid-margin stretch-card">
-        <div class="card">
-            <div class="card-body">
-                <h4 class="card-title">Recent Updates</h4>
-                <div class="d-flex">
-                    <div class="d-flex align-items-center mr-4 text-muted font-weight-light">
-                        <i class="mdi mdi-account-outline icon-sm mr-2"></i>
-                        <span>jack Menqu</span>
-                    </div>
-                    <div class="d-flex align-items-center text-muted font-weight-light">
-                        <i class="mdi mdi-clock icon-sm mr-2"></i>
-                        <span>October 3rd, 2018</span>
-                    </div>
-                </div>
-                <div class="row mt-3">
-                    <div class="col-6 pr-1">
-                        <img src="~/WriterTheme/assets/images/dashboard/img_1.jpg" class="mb-2 mw-100 w-100 rounded" alt="image">
-                        <img src="~/WriterTheme/assets/images/dashboard/img_4.jpg" class="mw-100 w-100 rounded" alt="image">
-                    </div>
-                    <div class="col-6 pl-1">
-                        <img src="~/WriterTheme/assets/images/dashboard/img_2.jpg" class="mb-2 mw-100 w-100 rounded" alt="image">
-                        <img src="~/WriterTheme/assets/images/dashboard/img_3.jpg" class="mw-100 w-100 rounded" alt="image">
-                    </div>
-                </div>
-                <div class="d-flex mt-5 align-items-top">
-                    <img src="~/WriterTheme/assets/images/faces/face3.jpg" class="img-sm rounded-circle mr-3" alt="image">
-                    <div class="mb-0 flex-grow">
-                        <h5 class="mr-2 mb-2">School Website - Authentication Module.</h5>
-                        <p class="mb-0 font-weight-light">It is a long established fact that a reader will be distracted by the readable content of a page.</p>
-                    </div>
-                    <div class="ml-auto">
-                        <i class="mdi mdi-heart-outline text-muted"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+@await Component.InvokeAsync("WriterAboutOnDashBoard")
 @await Component.InvokeAsync("CategoryListDashboard")
 </html>
 
