--- a/CoreDemo/Views/Shared/Components/WriterMessageNotification/Default.cshtml
+++ b/CoreDemo/Views/Shared/Components/WriterMessageNotification/Default.cshtml
@@ -1,73 +1,19 @@
-﻿@{
-    string formattedTime = "";
-    DateTime now = DateTime.Now;
-}
+﻿@using EntityLayer.Concrete
+@model List<Message2>
 <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="messageDropdown">
-    <h6 class="p-3 mb-0">Messages</h6>
+    <h6 class="p-3 mb-0">Mesajlar</h6>
     <div class="dropdown-divider"></div>
-  @*  @foreach (var item in Model)
+    @foreach (var item in Model)
     {
-        TimeSpan time = now.Subtract(item.MessageDate);
-
-        if (time.Days < 2)
-        {
-            if (time.Hours < 24)
-            {
-                if (time.Minutes == 0 && time.Hours == 0)
-                {
-                    formattedTime = "Şimdi";
-                }
-                else if (time.Minutes > 0 && time.Hours == 0)
-                {
-                    formattedTime = new DateTime(time.Ticks).ToString("m 'dakika önce'");
-                }
-                else
-                {
-                    formattedTime = new DateTime(time.Ticks).ToString("H 'saat' m 'dakika önce'");
-                }
-            }
-        }
-        else
-        {
-            if (time.Hours == 0)
-            {
-                formattedTime = new DateTime(time.Ticks).ToString("d 'Gün önce' ");
-            }
-            else
-            {
-                formattedTime = new DateTime(time.Ticks).ToString("d 'Gün' H 'saat önce'");
-            }
-        }*@
         <a class="dropdown-item preview-item">
             <div class="preview-thumbnail">
-                <img src="~/WriterTheme/assets/images/faces/face4.jpg" alt="image" class="profile-pic">
+                <img src="@item.SenderUser.WriterImage" alt="image" class="profile-pic">
             </div>
             <div class="preview-item-content d-flex align-items-start flex-column justify-content-center">
-                <h6 class="preview-subject ellipsis mb-1 font-weight-normal">Mark send you a message</h6>
-                <p class="text-gray mb-0"> 1 dakika önce </p>
+                <h6 class="preview-subject ellipsis mb-1 font-weight-normal">@item.SenderUser.WriteName sana mesaj gönderdi</h6>
+                <p class="text-gray mb-0"> @item.MessageCreatedAt.ToShortDateString() </p>
             </div>
         </a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item preview-item">
-            <div class="preview-thumbnail">
-                <img src="~/WriterTheme/assets/images/faces/face2.jpg" alt="image" class="profile-pic">
-            </div>
-            <div class="preview-item-content d-flex align-items-start flex-column justify-content-center">
-                <h6 class="preview-subject ellipsis mb-1 font-weight-normal">Cregh send you a message</h6>
-                <p class="text-gray mb-0"> 15 Minutes ago </p>
-            </div>
-        </a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item preview-item">
-            <div class="preview-thumbnail">
-                <img src="~/WriterTheme/assets/images/faces/face3.jpg" alt="image" class="profile-pic">
-            </div>
-            <div class="preview-item-content d-flex align-items-start flex-column justify-content-center">
-                <h6 class="preview-subject ellipsis mb-1 font-weight-normal">Profile picture updated</h6>
-                <p class="text-gray mb-0"> 18 Minutes ago </p>
-            </div>
-        </a>
-        <div class="dropdown-divider"></div>
-        <h6 class="p-3 mb-0 text-center">4 new messages</h6>
     }
+    <h6 class="p-3 mb-0 text-center"> @Model.Count.ToString() Yeni Mesaj </h6>
 </div>
